--- a/src/components/Timer/styles.css
+++ b/src/components/Timer/styles.css
@@ -1,17 +1,7 @@
-.circle-wrapper {
-    width: 120px;
-    height: 120px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    box-shadow: 0 5px 15px 0 rgba(0,0,0,0.9);
-    color: #3d5afe;
-    font-weight: 500;
+.MuiFormLabel-root {
+    color: #3d5afe!important;
 }
-.column-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 15px;
+.MuiInputLabel-formControl {
+    left: 25px!important;
 }
+
